tests/ui/unstable-feature_bound/unstable-feature-cross-crate-exact-symbol.fail.stderr
error: unstable feature `feat_moo` is used without being enabled.
  --> $DIR/unstable-feature-cross-crate-exact-symbol.rs:16:5
   |
LL |     Moo::foo();
   |     ^^^
   |
   = help: The feature can be enabled through #[unstable_feature_bound(feat_moo)] in std/core, or #[feature(feat_moo)] outside of std/core.
   = note: required for `Moo` to implement `Foo`

error: aborting due to 1 previous error

